--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@headlessui/react": "^1.7.18",
     "@heroicons/react": "^2.1.1",
     "@rainbow-me/rainbowkit": "^1.3.3",
+    "alchemy-sdk": "^3.1.1",
     "next": "^14.0.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -32,6 +33,6 @@
     "typescript": "^5.0.4"
   },
   "engines": {
-    "node": ">=16.8.0"
+    "node": "18"
   }
 }
